# OpenGL-template-project

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
shared_sources/glad/: glad.c  glad.h
